--- a/config/locales/responders.en.yml
+++ b/config/locales/responders.en.yml
@@ -2,11 +2,11 @@ en:
   flash:
     actions:
       create:
-        notice: '%{resource_name} was successfully created.'
-        # alert: '%{resource_name} could not be created.'
+        success: '%{resource_name} was successfully created.'
+        # failure: '%{resource_name} could not be created.'
       update:
-        notice: '%{resource_name} was successfully updated.'
-        # alert: '%{resource_name} could not be updated.'
+        success: '%{resource_name} was successfully updated.'
+        # failure: '%{resource_name} could not be updated.'
       destroy:
-        notice: '%{resource_name} was successfully destroyed.'
-        alert: '%{resource_name} could not be destroyed.'
+        success: '%{resource_name} was successfully destroyed.'
+        failure: '%{resource_name} could not be destroyed.'
